# Build arguments go here. for linux debug
# See "gn args <out_dir> --list" for available build arguments.

use_goma = false  # Googlers only.
is_debug = true  # Enable debugging features.

pdf_use_skia = false  # Set true to enable experimental skia backend.
pdf_use_skia_paths = false  # Set true to enable experimental skia backend (paths only).

pdf_enable_xfa = false  # Set false to remove XFA support (implies JS support).
pdf_enable_v8 = false  # Set false to remove Javascript support.
pdf_is_standalone = true  # Set for a non-embedded build.
is_component_build = false # Disable component build (must be false)

clang_use_chrome_plugins = false  # Currently must be false.
use_sysroot = false  # Currently must be false on Linux.

pdf_is_complete_lib = true # Build a complete static library

is_clang = true
use_custom_libcxx=false

treat_warnings_as_errors=false
icu_use_data_file=false

use_system_freetype=false

pdf_use_partition_alloc=true

use_debug_fission=false
