cmake_minimum_required(VERSION 3.10)

add_library(pdf_core
        fdrm/fx_crypt.cpp
        fdrm/fx_crypt.h
        fdrm/fx_crypt_aes.cpp
        fdrm/fx_crypt_sha.cpp
        fpdfapi/cmaps/CNS1/Adobe-CNS1-UCS2_5.cpp
        fpdfapi/cmaps/CNS1/B5pc-H_0.cpp
        fpdfapi/cmaps/CNS1/B5pc-V_0.cpp
        fpdfapi/cmaps/CNS1/CNS-EUC-H_0.cpp
        fpdfapi/cmaps/CNS1/CNS-EUC-V_0.cpp
        fpdfapi/cmaps/CNS1/ETen-B5-H_0.cpp
        fpdfapi/cmaps/CNS1/ETen-B5-V_0.cpp
        fpdfapi/cmaps/CNS1/ETenms-B5-H_0.cpp
        fpdfapi/cmaps/CNS1/ETenms-B5-V_0.cpp
        fpdfapi/cmaps/CNS1/HKscs-B5-H_5.cpp
        fpdfapi/cmaps/CNS1/HKscs-B5-V_5.cpp
        fpdfapi/cmaps/CNS1/UniCNS-UCS2-H_3.cpp
        fpdfapi/cmaps/CNS1/UniCNS-UCS2-V_3.cpp
        fpdfapi/cmaps/CNS1/UniCNS-UTF16-H_0.cpp
        fpdfapi/cmaps/CNS1/cmaps_cns1.cpp
        fpdfapi/cmaps/GB1/Adobe-GB1-UCS2_5.cpp
        fpdfapi/cmaps/GB1/GB-EUC-H_0.cpp
        fpdfapi/cmaps/GB1/GB-EUC-V_0.cpp
        fpdfapi/cmaps/GB1/GBK-EUC-H_2.cpp
        fpdfapi/cmaps/GB1/GBK-EUC-V_2.cpp
        fpdfapi/cmaps/GB1/GBK2K-H_5.cpp
        fpdfapi/cmaps/GB1/GBK2K-V_5.cpp
        fpdfapi/cmaps/GB1/GBKp-EUC-H_2.cpp
        fpdfapi/cmaps/GB1/GBKp-EUC-V_2.cpp
        fpdfapi/cmaps/GB1/GBpc-EUC-H_0.cpp
        fpdfapi/cmaps/GB1/GBpc-EUC-V_0.cpp
        fpdfapi/cmaps/GB1/UniGB-UCS2-H_4.cpp
        fpdfapi/cmaps/GB1/UniGB-UCS2-V_4.cpp
        fpdfapi/cmaps/GB1/cmaps_gb1.cpp
        fpdfapi/cmaps/Japan1/83pv-RKSJ-H_1.cpp
        fpdfapi/cmaps/Japan1/90ms-RKSJ-H_2.cpp
        fpdfapi/cmaps/Japan1/90ms-RKSJ-V_2.cpp
        fpdfapi/cmaps/Japan1/90msp-RKSJ-H_2.cpp
        fpdfapi/cmaps/Japan1/90msp-RKSJ-V_2.cpp
        fpdfapi/cmaps/Japan1/90pv-RKSJ-H_1.cpp
        fpdfapi/cmaps/Japan1/Add-RKSJ-H_1.cpp
        fpdfapi/cmaps/Japan1/Add-RKSJ-V_1.cpp
        fpdfapi/cmaps/Japan1/Adobe-Japan1-UCS2_4.cpp
        fpdfapi/cmaps/Japan1/EUC-H_1.cpp
        fpdfapi/cmaps/Japan1/EUC-V_1.cpp
        fpdfapi/cmaps/Japan1/Ext-RKSJ-H_2.cpp
        fpdfapi/cmaps/Japan1/Ext-RKSJ-V_2.cpp
        fpdfapi/cmaps/Japan1/H_1.cpp
        fpdfapi/cmaps/Japan1/UniJIS-UCS2-HW-H_4.cpp
        fpdfapi/cmaps/Japan1/UniJIS-UCS2-HW-V_4.cpp
        fpdfapi/cmaps/Japan1/UniJIS-UCS2-H_4.cpp
        fpdfapi/cmaps/Japan1/UniJIS-UCS2-V_4.cpp
        fpdfapi/cmaps/Japan1/V_1.cpp
        fpdfapi/cmaps/Japan1/cmaps_japan1.cpp
        fpdfapi/cmaps/Korea1/Adobe-Korea1-UCS2_2.cpp
        fpdfapi/cmaps/Korea1/KSC-EUC-H_0.cpp
        fpdfapi/cmaps/Korea1/KSC-EUC-V_0.cpp
        fpdfapi/cmaps/Korea1/KSCms-UHC-HW-H_1.cpp
        fpdfapi/cmaps/Korea1/KSCms-UHC-HW-V_1.cpp
        fpdfapi/cmaps/Korea1/KSCms-UHC-H_1.cpp
        fpdfapi/cmaps/Korea1/KSCms-UHC-V_1.cpp
        fpdfapi/cmaps/Korea1/KSCpc-EUC-H_0.cpp
        fpdfapi/cmaps/Korea1/UniKS-UCS2-H_1.cpp
        fpdfapi/cmaps/Korea1/UniKS-UCS2-V_1.cpp
        fpdfapi/cmaps/Korea1/UniKS-UTF16-H_0.cpp
        fpdfapi/cmaps/Korea1/cmaps_korea1.cpp
        fpdfapi/cmaps/fpdf_cmaps.cpp
        fpdfapi/cmaps/fpdf_cmaps.h

        fpdfapi/edit/cpdf_contentstream_write_utils.cpp
        fpdfapi/edit/cpdf_contentstream_write_utils.h
        fpdfapi/edit/cpdf_creator.cpp
        fpdfapi/edit/cpdf_creator.h
        fpdfapi/edit/cpdf_pagecontentgenerator.cpp
        fpdfapi/edit/cpdf_pagecontentgenerator.h
        fpdfapi/edit/cpdf_pagecontentmanager.cpp
        fpdfapi/edit/cpdf_pagecontentmanager.h
        fpdfapi/edit/cpdf_stringarchivestream.cpp
        fpdfapi/edit/cpdf_stringarchivestream.h

        fpdfapi/font/cfx_cttgsubtable.cpp
        fpdfapi/font/cfx_cttgsubtable.h
        fpdfapi/font/cfx_stockfontarray.cpp
        fpdfapi/font/cfx_stockfontarray.h
        fpdfapi/font/cpdf_cid2unicodemap.cpp
        fpdfapi/font/cpdf_cid2unicodemap.h
        fpdfapi/font/cpdf_cidfont.cpp
        fpdfapi/font/cpdf_cidfont.h
        fpdfapi/font/cpdf_cmap.cpp
        fpdfapi/font/cpdf_cmap.h
        fpdfapi/font/cpdf_cmapparser.cpp
        fpdfapi/font/cpdf_cmapparser.h
        fpdfapi/font/cpdf_font.cpp
        fpdfapi/font/cpdf_font.h
        fpdfapi/font/cpdf_fontencoding.cpp
        fpdfapi/font/cpdf_fontencoding.h
        fpdfapi/font/cpdf_fontglobals.cpp
        fpdfapi/font/cpdf_fontglobals.h
        fpdfapi/font/cpdf_simplefont.cpp
        fpdfapi/font/cpdf_simplefont.h
        fpdfapi/font/cpdf_tounicodemap.cpp
        fpdfapi/font/cpdf_tounicodemap.h
        fpdfapi/font/cpdf_truetypefont.cpp
        fpdfapi/font/cpdf_truetypefont.h
        fpdfapi/font/cpdf_type1font.cpp
        fpdfapi/font/cpdf_type1font.h
        fpdfapi/font/cpdf_type3char.cpp
        fpdfapi/font/cpdf_type3char.h
        fpdfapi/font/cpdf_type3font.cpp
        fpdfapi/font/cpdf_type3font.h

        fpdfapi/page/cpdf_allstates.cpp
        fpdfapi/page/cpdf_allstates.h
        fpdfapi/page/cpdf_annotcontext.cpp
        fpdfapi/page/cpdf_annotcontext.h
        fpdfapi/page/cpdf_basedcs.cpp
        fpdfapi/page/cpdf_basedcs.h
        fpdfapi/page/cpdf_clippath.cpp
        fpdfapi/page/cpdf_clippath.h
        fpdfapi/page/cpdf_color.cpp
        fpdfapi/page/cpdf_color.h
        fpdfapi/page/cpdf_colorspace.cpp
        fpdfapi/page/cpdf_colorspace.h
        fpdfapi/page/cpdf_colorstate.cpp
        fpdfapi/page/cpdf_colorstate.h
        fpdfapi/page/cpdf_contentmarkitem.cpp
        fpdfapi/page/cpdf_contentmarkitem.h
        fpdfapi/page/cpdf_contentmarks.cpp
        fpdfapi/page/cpdf_contentmarks.h
        fpdfapi/page/cpdf_contentparser.cpp
        fpdfapi/page/cpdf_contentparser.h
        fpdfapi/page/cpdf_devicecs.cpp
        fpdfapi/page/cpdf_devicecs.h
        fpdfapi/page/cpdf_dib.cpp
        fpdfapi/page/cpdf_dib.h
        fpdfapi/page/cpdf_docpagedata.cpp
        fpdfapi/page/cpdf_docpagedata.h
        fpdfapi/page/cpdf_expintfunc.cpp
        fpdfapi/page/cpdf_expintfunc.h
        fpdfapi/page/cpdf_form.cpp
        fpdfapi/page/cpdf_form.h
        fpdfapi/page/cpdf_formobject.cpp
        fpdfapi/page/cpdf_formobject.h
        fpdfapi/page/cpdf_function.cpp
        fpdfapi/page/cpdf_function.h
        fpdfapi/page/cpdf_generalstate.cpp
        fpdfapi/page/cpdf_generalstate.h
        fpdfapi/page/cpdf_graphicstates.cpp
        fpdfapi/page/cpdf_graphicstates.h
        fpdfapi/page/cpdf_iccprofile.cpp
        fpdfapi/page/cpdf_iccprofile.h
        fpdfapi/page/cpdf_image.cpp
        fpdfapi/page/cpdf_image.h
        fpdfapi/page/cpdf_imageloader.cpp
        fpdfapi/page/cpdf_imageloader.h
        fpdfapi/page/cpdf_imageobject.cpp
        fpdfapi/page/cpdf_imageobject.h
        fpdfapi/page/cpdf_indexedcs.cpp
        fpdfapi/page/cpdf_indexedcs.h
        fpdfapi/page/cpdf_meshstream.cpp
        fpdfapi/page/cpdf_meshstream.h
        fpdfapi/page/cpdf_occontext.cpp
        fpdfapi/page/cpdf_occontext.h
        fpdfapi/page/cpdf_page.cpp
        fpdfapi/page/cpdf_page.h
        fpdfapi/page/cpdf_pageimagecache.cpp
        fpdfapi/page/cpdf_pageimagecache.h
        fpdfapi/page/cpdf_pagemodule.cpp
        fpdfapi/page/cpdf_pagemodule.h
        fpdfapi/page/cpdf_pageobject.cpp
        fpdfapi/page/cpdf_pageobject.h
        fpdfapi/page/cpdf_pageobjectholder.cpp
        fpdfapi/page/cpdf_pageobjectholder.h
        fpdfapi/page/cpdf_path.cpp
        fpdfapi/page/cpdf_path.h
        fpdfapi/page/cpdf_pathobject.cpp
        fpdfapi/page/cpdf_pathobject.h
        fpdfapi/page/cpdf_pattern.cpp
        fpdfapi/page/cpdf_pattern.h
        fpdfapi/page/cpdf_patterncs.cpp
        fpdfapi/page/cpdf_patterncs.h
        fpdfapi/page/cpdf_psengine.cpp
        fpdfapi/page/cpdf_psengine.h
        fpdfapi/page/cpdf_psfunc.cpp
        fpdfapi/page/cpdf_psfunc.h
        fpdfapi/page/cpdf_sampledfunc.cpp
        fpdfapi/page/cpdf_sampledfunc.h
        fpdfapi/page/cpdf_shadingobject.cpp
        fpdfapi/page/cpdf_shadingobject.h
        fpdfapi/page/cpdf_shadingpattern.cpp
        fpdfapi/page/cpdf_shadingpattern.h
        fpdfapi/page/cpdf_stitchfunc.cpp
        fpdfapi/page/cpdf_stitchfunc.h
        fpdfapi/page/cpdf_streamcontentparser.cpp
        fpdfapi/page/cpdf_streamcontentparser.h
        fpdfapi/page/cpdf_streamparser.cpp
        fpdfapi/page/cpdf_streamparser.h
        fpdfapi/page/cpdf_textobject.cpp
        fpdfapi/page/cpdf_textobject.h
        fpdfapi/page/cpdf_textstate.cpp
        fpdfapi/page/cpdf_textstate.h
        fpdfapi/page/cpdf_tilingpattern.cpp
        fpdfapi/page/cpdf_tilingpattern.h
        fpdfapi/page/cpdf_transferfunc.cpp
        fpdfapi/page/cpdf_transferfunc.h
        fpdfapi/page/cpdf_transferfuncdib.cpp
        fpdfapi/page/cpdf_transferfuncdib.h
        fpdfapi/page/cpdf_transparency.cpp
        fpdfapi/page/cpdf_transparency.h
        fpdfapi/page/ipdf_page.h

        fpdfapi/parser/cfdf_document.cpp
        fpdfapi/parser/cfdf_document.h
        fpdfapi/parser/cpdf_array.cpp
        fpdfapi/parser/cpdf_array.h
        fpdfapi/parser/cpdf_boolean.cpp
        fpdfapi/parser/cpdf_boolean.h
        fpdfapi/parser/cpdf_cross_ref_avail.cpp
        fpdfapi/parser/cpdf_cross_ref_avail.h
        fpdfapi/parser/cpdf_cross_ref_table.cpp
        fpdfapi/parser/cpdf_cross_ref_table.h
        fpdfapi/parser/cpdf_crypto_handler.cpp
        fpdfapi/parser/cpdf_crypto_handler.h
        fpdfapi/parser/cpdf_data_avail.cpp
        fpdfapi/parser/cpdf_data_avail.h
        fpdfapi/parser/cpdf_dictionary.cpp
        fpdfapi/parser/cpdf_dictionary.h
        fpdfapi/parser/cpdf_document.cpp
        fpdfapi/parser/cpdf_document.h
        fpdfapi/parser/cpdf_encryptor.cpp
        fpdfapi/parser/cpdf_encryptor.h
        fpdfapi/parser/cpdf_flateencoder.cpp
        fpdfapi/parser/cpdf_flateencoder.h
        fpdfapi/parser/cpdf_hint_tables.cpp
        fpdfapi/parser/cpdf_hint_tables.h
        fpdfapi/parser/cpdf_indirect_object_holder.cpp
        fpdfapi/parser/cpdf_indirect_object_holder.h
        fpdfapi/parser/cpdf_linearized_header.cpp
        fpdfapi/parser/cpdf_linearized_header.h
        fpdfapi/parser/cpdf_name.cpp
        fpdfapi/parser/cpdf_name.h
        fpdfapi/parser/cpdf_null.cpp
        fpdfapi/parser/cpdf_null.h
        fpdfapi/parser/cpdf_number.cpp
        fpdfapi/parser/cpdf_number.h
        fpdfapi/parser/cpdf_object.cpp
        fpdfapi/parser/cpdf_object.h
        fpdfapi/parser/cpdf_object_avail.cpp
        fpdfapi/parser/cpdf_object_avail.h
        fpdfapi/parser/cpdf_object_stream.cpp
        fpdfapi/parser/cpdf_object_stream.h
        fpdfapi/parser/cpdf_object_walker.cpp
        fpdfapi/parser/cpdf_object_walker.h
        fpdfapi/parser/cpdf_page_object_avail.cpp
        fpdfapi/parser/cpdf_page_object_avail.h
        fpdfapi/parser/cpdf_parser.cpp
        fpdfapi/parser/cpdf_parser.h
        fpdfapi/parser/cpdf_read_validator.cpp
        fpdfapi/parser/cpdf_read_validator.h
        fpdfapi/parser/cpdf_reference.cpp
        fpdfapi/parser/cpdf_reference.h
        fpdfapi/parser/cpdf_security_handler.cpp
        fpdfapi/parser/cpdf_security_handler.h
        fpdfapi/parser/cpdf_simple_parser.cpp
        fpdfapi/parser/cpdf_simple_parser.h
        fpdfapi/parser/cpdf_stream.cpp
        fpdfapi/parser/cpdf_stream.h
        fpdfapi/parser/cpdf_stream_acc.cpp
        fpdfapi/parser/cpdf_stream_acc.h
        fpdfapi/parser/cpdf_string.cpp
        fpdfapi/parser/cpdf_string.h
        fpdfapi/parser/cpdf_syntax_parser.cpp
        fpdfapi/parser/cpdf_syntax_parser.h
        fpdfapi/parser/fpdf_parser_decode.cpp
        fpdfapi/parser/fpdf_parser_decode.h
        fpdfapi/parser/fpdf_parser_utility.cpp
        fpdfapi/parser/fpdf_parser_utility.h
        fpdfapi/parser/object_tree_traversal_util.cpp
        fpdfapi/parser/object_tree_traversal_util.h

        fpdfapi/render/charposlist.cpp
        fpdfapi/render/charposlist.h
        fpdfapi/render/cpdf_devicebuffer.cpp
        fpdfapi/render/cpdf_devicebuffer.h
        fpdfapi/render/cpdf_docrenderdata.cpp
        fpdfapi/render/cpdf_docrenderdata.h
        fpdfapi/render/cpdf_imagerenderer.cpp
        fpdfapi/render/cpdf_imagerenderer.h
        fpdfapi/render/cpdf_pagerendercontext.cpp
        fpdfapi/render/cpdf_pagerendercontext.h
        fpdfapi/render/cpdf_progressiverenderer.cpp
        fpdfapi/render/cpdf_progressiverenderer.h
        fpdfapi/render/cpdf_rendercontext.cpp
        fpdfapi/render/cpdf_rendercontext.h
        fpdfapi/render/cpdf_renderoptions.cpp
        fpdfapi/render/cpdf_renderoptions.h
        fpdfapi/render/cpdf_rendershading.cpp
        fpdfapi/render/cpdf_rendershading.h
        fpdfapi/render/cpdf_renderstatus.cpp
        fpdfapi/render/cpdf_renderstatus.h
        fpdfapi/render/cpdf_rendertiling.cpp
        fpdfapi/render/cpdf_rendertiling.h
        fpdfapi/render/cpdf_scaledrenderbuffer.cpp
        fpdfapi/render/cpdf_scaledrenderbuffer.h
        fpdfapi/render/cpdf_textrenderer.cpp
        fpdfapi/render/cpdf_textrenderer.h
        fpdfapi/render/cpdf_type3cache.cpp
        fpdfapi/render/cpdf_type3cache.h
        fpdfapi/render/cpdf_type3glyphmap.cpp
        fpdfapi/render/cpdf_type3glyphmap.h

        fpdfdoc/cpdf_aaction.cpp
        fpdfdoc/cpdf_aaction.h
        fpdfdoc/cpdf_action.cpp
        fpdfdoc/cpdf_action.h
        fpdfdoc/cpdf_annot.cpp
        fpdfdoc/cpdf_annot.h
        fpdfdoc/cpdf_annotlist.cpp
        fpdfdoc/cpdf_annotlist.h
        fpdfdoc/cpdf_apsettings.cpp
        fpdfdoc/cpdf_apsettings.h
        fpdfdoc/cpdf_bafontmap.cpp
        fpdfdoc/cpdf_bafontmap.h
        fpdfdoc/cpdf_bookmark.cpp
        fpdfdoc/cpdf_bookmark.h
        fpdfdoc/cpdf_bookmarktree.cpp
        fpdfdoc/cpdf_bookmarktree.h
        fpdfdoc/cpdf_color_utils.cpp
        fpdfdoc/cpdf_color_utils.h
        fpdfdoc/cpdf_defaultappearance.cpp
        fpdfdoc/cpdf_defaultappearance.h
        fpdfdoc/cpdf_dest.cpp
        fpdfdoc/cpdf_dest.h
        fpdfdoc/cpdf_filespec.cpp
        fpdfdoc/cpdf_filespec.h
        fpdfdoc/cpdf_formcontrol.cpp
        fpdfdoc/cpdf_formcontrol.h
        fpdfdoc/cpdf_formfield.cpp
        fpdfdoc/cpdf_formfield.h
        fpdfdoc/cpdf_generateap.cpp
        fpdfdoc/cpdf_generateap.h
        fpdfdoc/cpdf_icon.cpp
        fpdfdoc/cpdf_icon.h
        fpdfdoc/cpdf_iconfit.cpp
        fpdfdoc/cpdf_iconfit.h
        fpdfdoc/cpdf_interactiveform.cpp
        fpdfdoc/cpdf_interactiveform.h
        fpdfdoc/cpdf_link.cpp
        fpdfdoc/cpdf_link.h
        fpdfdoc/cpdf_linklist.cpp
        fpdfdoc/cpdf_linklist.h
        fpdfdoc/cpdf_metadata.cpp
        fpdfdoc/cpdf_metadata.h
        fpdfdoc/cpdf_nametree.cpp
        fpdfdoc/cpdf_nametree.h
        fpdfdoc/cpdf_numbertree.cpp
        fpdfdoc/cpdf_numbertree.h
        fpdfdoc/cpdf_pagelabel.cpp
        fpdfdoc/cpdf_pagelabel.h
        fpdfdoc/cpdf_structelement.cpp
        fpdfdoc/cpdf_structelement.h
        fpdfdoc/cpdf_structtree.cpp
        fpdfdoc/cpdf_structtree.h
        fpdfdoc/cpdf_viewerpreferences.cpp
        fpdfdoc/cpdf_viewerpreferences.h
        fpdfdoc/cpvt_floatrect.h
        fpdfdoc/cpvt_fontmap.cpp
        fpdfdoc/cpvt_fontmap.h
        fpdfdoc/cpvt_line.h
        fpdfdoc/cpvt_lineinfo.h
        fpdfdoc/cpvt_section.cpp
        fpdfdoc/cpvt_section.h
        fpdfdoc/cpvt_variabletext.cpp
        fpdfdoc/cpvt_variabletext.h
        fpdfdoc/cpvt_word.h
        fpdfdoc/cpvt_wordinfo.cpp
        fpdfdoc/cpvt_wordinfo.h
        fpdfdoc/cpvt_wordplace.h
        fpdfdoc/cpvt_wordrange.h
        fpdfdoc/ipvt_fontmap.h

        fpdftext/cpdf_linkextract.cpp
        fpdftext/cpdf_linkextract.h
        fpdftext/cpdf_textpage.cpp
        fpdftext/cpdf_textpage.h
        fpdftext/cpdf_textpagefind.cpp
        fpdftext/cpdf_textpagefind.h
        fpdftext/unicodenormalizationdata.cpp
        fpdftext/unicodenormalizationdata.h

        fxcodec/basic/basicmodule.cpp
        fxcodec/basic/basicmodule.h
        fxcodec/cfx_codec_memory.cpp
        fxcodec/cfx_codec_memory.h
        fxcodec/fax/faxmodule.cpp
        fxcodec/fax/faxmodule.h
        fxcodec/flate/flatemodule.cpp
        fxcodec/flate/flatemodule.h
        fxcodec/fx_codec.cpp
        fxcodec/fx_codec.h
        fxcodec/fx_codec_def.h
        fxcodec/icc/icc_transform.cpp
        fxcodec/icc/icc_transform.h
        fxcodec/jbig2/JBig2_ArithDecoder.cpp
        fxcodec/jbig2/JBig2_ArithDecoder.h
        fxcodec/jbig2/JBig2_ArithIntDecoder.cpp
        fxcodec/jbig2/JBig2_ArithIntDecoder.h
        fxcodec/jbig2/JBig2_BitStream.cpp
        fxcodec/jbig2/JBig2_BitStream.h
        fxcodec/jbig2/JBig2_Context.cpp
        fxcodec/jbig2/JBig2_Context.h
        fxcodec/jbig2/JBig2_Define.h
        fxcodec/jbig2/JBig2_DocumentContext.cpp
        fxcodec/jbig2/JBig2_DocumentContext.h
        fxcodec/jbig2/JBig2_GrdProc.cpp
        fxcodec/jbig2/JBig2_GrdProc.h
        fxcodec/jbig2/JBig2_GrrdProc.cpp
        fxcodec/jbig2/JBig2_GrrdProc.h
        fxcodec/jbig2/JBig2_HtrdProc.cpp
        fxcodec/jbig2/JBig2_HtrdProc.h
        fxcodec/jbig2/JBig2_HuffmanDecoder.cpp
        fxcodec/jbig2/JBig2_HuffmanDecoder.h
        fxcodec/jbig2/JBig2_HuffmanTable.cpp
        fxcodec/jbig2/JBig2_HuffmanTable.h
        fxcodec/jbig2/JBig2_Image.cpp
        fxcodec/jbig2/JBig2_Image.h
        fxcodec/jbig2/JBig2_Page.h
        fxcodec/jbig2/JBig2_PatternDict.cpp
        fxcodec/jbig2/JBig2_PatternDict.h
        fxcodec/jbig2/JBig2_PddProc.cpp
        fxcodec/jbig2/JBig2_PddProc.h
        fxcodec/jbig2/JBig2_SddProc.cpp
        fxcodec/jbig2/JBig2_SddProc.h
        fxcodec/jbig2/JBig2_Segment.cpp
        fxcodec/jbig2/JBig2_Segment.h
        fxcodec/jbig2/JBig2_SymbolDict.cpp
        fxcodec/jbig2/JBig2_SymbolDict.h
        fxcodec/jbig2/JBig2_TrdProc.cpp
        fxcodec/jbig2/JBig2_TrdProc.h
        fxcodec/jbig2/jbig2_decoder.cpp
        fxcodec/jbig2/jbig2_decoder.h
        fxcodec/jpeg/jpeg_common.cpp
        fxcodec/jpeg/jpeg_common.h
        fxcodec/jpeg/jpegmodule.cpp
        fxcodec/jpeg/jpegmodule.h
        fxcodec/jpx/cjpx_decoder.cpp
        fxcodec/jpx/cjpx_decoder.h
        fxcodec/jpx/jpx_decode_utils.cpp
        fxcodec/jpx/jpx_decode_utils.h
        fxcodec/scanlinedecoder.cpp
        fxcodec/scanlinedecoder.h

        fxcrt/autonuller.h
        fxcrt/autorestorer.h
        fxcrt/binary_buffer.cpp
        fxcrt/binary_buffer.h
        fxcrt/byteorder.h
        fxcrt/bytestring.cpp
        fxcrt/bytestring.h
        fxcrt/cfx_bitstream.cpp
        fxcrt/cfx_bitstream.h
        fxcrt/cfx_datetime.cpp
        fxcrt/cfx_datetime.h
        fxcrt/cfx_read_only_span_stream.cpp
        fxcrt/cfx_read_only_span_stream.h
        fxcrt/cfx_read_only_string_stream.cpp
        fxcrt/cfx_read_only_string_stream.h
        fxcrt/cfx_read_only_vector_stream.cpp
        fxcrt/cfx_read_only_vector_stream.h
        fxcrt/cfx_seekablestreamproxy.cpp
        fxcrt/cfx_seekablestreamproxy.h
        fxcrt/cfx_timer.cpp
        fxcrt/cfx_timer.h
        fxcrt/code_point_view.h
        fxcrt/data_vector.h
        fxcrt/fileaccess_iface.h
        fxcrt/fixed_size_data_vector.h
        fxcrt/fixed_try_alloc_zeroed_data_vector.h
        fxcrt/fixed_uninit_data_vector.h
        fxcrt/fixed_zeroed_data_vector.h
        fxcrt/fx_2d_size.h
        fxcrt/fx_bidi.cpp
        fxcrt/fx_bidi.h
        fxcrt/fx_codepage.cpp
        fxcrt/fx_codepage.h
        fxcrt/fx_codepage_forward.h
        fxcrt/fx_coordinates.cpp
        fxcrt/fx_coordinates.h
        fxcrt/fx_extension.cpp
        fxcrt/fx_extension.h
        fxcrt/fx_folder.h
        fxcrt/fx_memcpy_wrappers.h
        fxcrt/fx_memory.cpp
        fxcrt/fx_memory.h
        fxcrt/fx_memory_wrappers.h
        fxcrt/fx_number.cpp
        fxcrt/fx_number.h
        fxcrt/fx_random.cpp
        fxcrt/fx_random.h
        fxcrt/fx_safe_types.h
        fxcrt/fx_stream.cpp
        fxcrt/fx_stream.h
        fxcrt/fx_string.cpp
        fxcrt/fx_string.h
        fxcrt/fx_string_wrappers.h
        fxcrt/fx_system.cpp
        fxcrt/fx_system.h
        fxcrt/fx_types.h
        fxcrt/fx_unicode.cpp
        fxcrt/fx_unicode.h
        fxcrt/mask.h
        fxcrt/maybe_owned.h
        fxcrt/observed_ptr.cpp
        fxcrt/observed_ptr.h
        fxcrt/pauseindicator_iface.h
        fxcrt/retain_ptr.h
        fxcrt/scoped_set_insertion.h
        fxcrt/shared_copy_on_write.h
        fxcrt/small_buffer.h
        fxcrt/span_util.h
        fxcrt/stl_util.h
        fxcrt/string_data_template.cpp
        fxcrt/string_data_template.h
        fxcrt/string_pool_template.h
        fxcrt/string_view_template.h
        fxcrt/tree_node.h
        fxcrt/utf16.h
        fxcrt/weak_ptr.h
        fxcrt/widestring.cpp
        fxcrt/widestring.h
        fxcrt/widetext_buffer.cpp
        fxcrt/widetext_buffer.h
        fxcrt/fx_memory_malloc.cpp
        fxcrt/cfx_fileaccess_posix.cpp
        fxcrt/cfx_fileaccess_posix.h
        fxcrt/fx_folder_posix.cpp

        fxcrt/xml/cfx_xmlchardata.cpp
        fxcrt/xml/cfx_xmlchardata.h
        fxcrt/xml/cfx_xmldocument.cpp
        fxcrt/xml/cfx_xmldocument.h
        fxcrt/xml/cfx_xmlelement.cpp
        fxcrt/xml/cfx_xmlelement.h
        fxcrt/xml/cfx_xmlinstruction.cpp
        fxcrt/xml/cfx_xmlinstruction.h
        fxcrt/xml/cfx_xmlnode.cpp
        fxcrt/xml/cfx_xmlnode.h
        fxcrt/xml/cfx_xmlparser.cpp
        fxcrt/xml/cfx_xmlparser.h
        fxcrt/xml/cfx_xmltext.cpp
        fxcrt/xml/cfx_xmltext.h

        fxge/agg/fx_agg_driver.cpp
        fxge/agg/fx_agg_driver.h
        fxge/calculate_pitch.cpp
        fxge/calculate_pitch.h
        fxge/cfx_cliprgn.cpp
        fxge/cfx_cliprgn.h
        fxge/cfx_color.cpp
        fxge/cfx_color.h
        fxge/cfx_defaultrenderdevice.cpp
        fxge/cfx_defaultrenderdevice.h
        fxge/cfx_drawutils.cpp
        fxge/cfx_drawutils.h
        fxge/cfx_face.cpp
        fxge/cfx_face.h
        fxge/cfx_fillrenderoptions.h
        fxge/cfx_folderfontinfo.cpp
        fxge/cfx_folderfontinfo.h
        fxge/cfx_font.cpp
        fxge/cfx_font.h
        fxge/cfx_fontcache.cpp
        fxge/cfx_fontcache.h
        fxge/cfx_fontmapper.cpp
        fxge/cfx_fontmapper.h
        fxge/cfx_fontmgr.cpp
        fxge/cfx_fontmgr.h
        fxge/cfx_gemodule.cpp
        fxge/cfx_gemodule.h
        fxge/cfx_glyphbitmap.cpp
        fxge/cfx_glyphbitmap.h
        fxge/cfx_glyphcache.cpp
        fxge/cfx_glyphcache.h
        fxge/cfx_graphstate.cpp
        fxge/cfx_graphstate.h
        fxge/cfx_graphstatedata.cpp
        fxge/cfx_graphstatedata.h
        fxge/cfx_path.cpp
        fxge/cfx_path.h
        fxge/cfx_renderdevice.cpp
        fxge/cfx_renderdevice.h
        fxge/cfx_substfont.cpp
        fxge/cfx_substfont.h
        fxge/cfx_textrenderoptions.h
        fxge/cfx_unicodeencoding.cpp
        fxge/cfx_unicodeencoding.h
        fxge/dib/cfx_bitmapcomposer.cpp
        fxge/dib/cfx_bitmapcomposer.h
        fxge/dib/cfx_bitmapstorer.cpp
        fxge/dib/cfx_bitmapstorer.h
        fxge/dib/cfx_cmyk_to_srgb.cpp
        fxge/dib/cfx_cmyk_to_srgb.h
        fxge/dib/cfx_dibbase.cpp
        fxge/dib/cfx_dibbase.h
        fxge/dib/cfx_dibitmap.cpp
        fxge/dib/cfx_dibitmap.h
        fxge/dib/cfx_imagerenderer.cpp
        fxge/dib/cfx_imagerenderer.h
        fxge/dib/cfx_imagestretcher.cpp
        fxge/dib/cfx_imagestretcher.h
        fxge/dib/cfx_imagetransformer.cpp
        fxge/dib/cfx_imagetransformer.h
        fxge/dib/cfx_scanlinecompositor.cpp
        fxge/dib/cfx_scanlinecompositor.h
        fxge/dib/cstretchengine.cpp
        fxge/dib/cstretchengine.h
        fxge/dib/fx_dib.cpp
        fxge/dib/fx_dib.h
        fxge/dib/scanlinecomposer_iface.h
        fxge/fontdata/chromefontdata/FoxitDingbats.cpp
        fxge/fontdata/chromefontdata/FoxitFixed.cpp
        fxge/fontdata/chromefontdata/FoxitFixedBold.cpp
        fxge/fontdata/chromefontdata/FoxitFixedBoldItalic.cpp
        fxge/fontdata/chromefontdata/FoxitFixedItalic.cpp
        fxge/fontdata/chromefontdata/FoxitSans.cpp
        fxge/fontdata/chromefontdata/FoxitSansBold.cpp
        fxge/fontdata/chromefontdata/FoxitSansBoldItalic.cpp
        fxge/fontdata/chromefontdata/FoxitSansItalic.cpp
        fxge/fontdata/chromefontdata/FoxitSansMM.cpp
        fxge/fontdata/chromefontdata/FoxitSerif.cpp
        fxge/fontdata/chromefontdata/FoxitSerifBold.cpp
        fxge/fontdata/chromefontdata/FoxitSerifBoldItalic.cpp
        fxge/fontdata/chromefontdata/FoxitSerifItalic.cpp
        fxge/fontdata/chromefontdata/FoxitSerifMM.cpp
        fxge/fontdata/chromefontdata/FoxitSymbol.cpp
        fxge/fontdata/chromefontdata/chromefontdata.h
        fxge/freetype/fx_freetype.cpp
        fxge/freetype/fx_freetype.h
        fxge/fx_font.cpp
        fxge/fx_font.h
        fxge/render_defines.h
        fxge/renderdevicedriver_iface.cpp
        fxge/renderdevicedriver_iface.h
        fxge/scoped_font_transform.cpp
        fxge/scoped_font_transform.h
        fxge/systemfontinfo_iface.h
        fxge/text_char_pos.cpp
        fxge/text_char_pos.h
        fxge/text_glyph_pos.cpp
        fxge/text_glyph_pos.h

        fxge/linux/fx_linux_impl.cpp

        fxge/skia/cfx_dibbase_skia.cpp
        fxge/skia/fx_skia_device.cpp
        )

target_compile_definitions(pdf_core PRIVATE USE_SYSTEM_LIBJPEG)
target_compile_definitions(pdf_core PRIVATE USE_SYSTEM_ZLIB)
target_compile_definitions(pdf_core PRIVATE _SKIA_SUPPORT_)

target_include_directories(pdf_core PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${CMAKE_CURRENT_SOURCE_DIR}/../
        )

target_link_libraries(pdf_core PUBLIC constants pdfium_base absl openjpeg2 fx_lcms2 fx_agg fx_freetype skia fontconfig pthread harfbuzz jpeg png icuuc icudata z)