cmake_minimum_required(VERSION 3.10)

add_library(pdf_sdk
        cpdfsdk_annot.cpp
        cpdfsdk_annot.h
        cpdfsdk_annotiteration.cpp
        cpdfsdk_annotiteration.h
        cpdfsdk_annotiterator.cpp
        cpdfsdk_annotiterator.h
        cpdfsdk_appstream.cpp
        cpdfsdk_appstream.h
        cpdfsdk_baannot.cpp
        cpdfsdk_baannot.h
        cpdfsdk_customaccess.cpp
        cpdfsdk_customaccess.h
        cpdfsdk_filewriteadapter.cpp
        cpdfsdk_filewriteadapter.h
        cpdfsdk_formfillenvironment.cpp
        cpdfsdk_formfillenvironment.h
        cpdfsdk_helpers.cpp
        cpdfsdk_helpers.h
        cpdfsdk_interactiveform.cpp
        cpdfsdk_interactiveform.h
        cpdfsdk_pageview.cpp
        cpdfsdk_pageview.h
        cpdfsdk_pauseadapter.cpp
        cpdfsdk_pauseadapter.h
        cpdfsdk_renderpage.cpp
        cpdfsdk_renderpage.h
        cpdfsdk_widget.cpp
        cpdfsdk_widget.h
        fpdf_annot.cpp
        fpdf_attachment.cpp
        fpdf_catalog.cpp
        fpdf_dataavail.cpp
        fpdf_doc.cpp
        fpdf_editimg.cpp
        fpdf_editpage.cpp
        fpdf_editpath.cpp
        fpdf_edittext.cpp
        fpdf_ext.cpp
        fpdf_flatten.cpp
        fpdf_formfill.cpp
        fpdf_javascript.cpp
        fpdf_ppo.cpp
        fpdf_progressive.cpp
        fpdf_save.cpp
        fpdf_searchex.cpp
        fpdf_signature.cpp
        fpdf_structtree.cpp
        fpdf_sysfontinfo.cpp
        fpdf_text.cpp
        fpdf_thumbnail.cpp
        fpdf_transformpage.cpp
        fpdf_view.cpp

        formfiller/cffl_button.cpp
        formfiller/cffl_button.h
        formfiller/cffl_checkbox.cpp
        formfiller/cffl_checkbox.h
        formfiller/cffl_combobox.cpp
        formfiller/cffl_combobox.h
        formfiller/cffl_fieldaction.cpp
        formfiller/cffl_fieldaction.h
        formfiller/cffl_formfield.cpp
        formfiller/cffl_formfield.h
        formfiller/cffl_interactiveformfiller.cpp
        formfiller/cffl_interactiveformfiller.h
        formfiller/cffl_listbox.cpp
        formfiller/cffl_listbox.h
        formfiller/cffl_perwindowdata.cpp
        formfiller/cffl_perwindowdata.h
        formfiller/cffl_pushbutton.cpp
        formfiller/cffl_pushbutton.h
        formfiller/cffl_radiobutton.cpp
        formfiller/cffl_radiobutton.h
        formfiller/cffl_textfield.cpp
        formfiller/cffl_textfield.h
        formfiller/cffl_textobject.cpp
        formfiller/cffl_textobject.h

#        fpdfxfa

        pwl/cpwl_button.cpp
        pwl/cpwl_button.h
        pwl/cpwl_caret.cpp
        pwl/cpwl_caret.h
        pwl/cpwl_cbbutton.cpp
        pwl/cpwl_cbbutton.h
        pwl/cpwl_cblistbox.cpp
        pwl/cpwl_cblistbox.h
        pwl/cpwl_combo_box.cpp
        pwl/cpwl_combo_box.h
        pwl/cpwl_edit.cpp
        pwl/cpwl_edit.h
        pwl/cpwl_edit_impl.cpp
        pwl/cpwl_edit_impl.h
        pwl/cpwl_list_box.cpp
        pwl/cpwl_list_box.h
        pwl/cpwl_list_ctrl.cpp
        pwl/cpwl_list_ctrl.h
        pwl/cpwl_sbbutton.cpp
        pwl/cpwl_sbbutton.h
        pwl/cpwl_scroll_bar.cpp
        pwl/cpwl_scroll_bar.h
        pwl/cpwl_special_button.cpp
        pwl/cpwl_special_button.h
        pwl/cpwl_wnd.cpp
        pwl/cpwl_wnd.h
        pwl/ipwl_fillernotify.h
        )

target_include_directories(pdf_sdk PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${CMAKE_CURRENT_SOURCE_DIR}/../
        )

target_link_libraries(pdf_sdk PUBLIC pdf_core fxjs)